--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<article class="box">
 						<header>
 							<h2>I am a Cloud and Infrastructure Consultant</h2>
-							<p>AWS, Azure, Google Cloud, Linux and Windows-Server</p>						
+							<p>AWS, Azure, Google Cloud, Linux and Windows-Server</p>
 						</header>
 						<div class="content">
 							<p>The cloud is just someone elses computer - you can't just throw your existing processes, servers and tools in the cloud and hope that it will help you - you'll just create a disaster for yourself. That is where I can help. I have experience with Amazon Web Services, Microsoft Azure and Google Cloud Platform in addition to having worked with Linux and Windows servers for years. Let us rethink the the cloud migration and find a great solution together.</p>
@@ -91,7 +91,7 @@
 				<a href="#four" class="more">Learn More</a>
 			</section>
 
-	
+
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
@@ -138,6 +138,8 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+
+			<link rel="stylesheet" type="text/css" href="//wpcc.io/lib/1.0.2/cookieconsent.min.css"/><script src="//wpcc.io/lib/1.0.2/cookieconsent.min.js"></script><script>window.addEventListener("load", function(){window.wpcc.init({"border":"thin","corners":"small","colors":{"popup":{"background":"#f6f6f6","text":"#000000","border":"#555555"},"button":{"background":"#555555","text":"#ffffff"}}})});</script>
 
 	</body>
 </html>
