--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<p>The cloud is just someone elses computer - you can't just throw your existing processes, servers and tools in the cloud and hope that it will help you - you'll just create a disaster for yourself. That is where I can help. I have experience with Amazon Web Services, Microsoft Azure and Google Cloud Platform in addition to having worked with Linux and Windows servers for years. Let us rethink the the cloud migration and find a great solution together.</p>
 						</div>
 						<footer>
-							<a href="https://kmoberg.tech" class="button alt">Learn More</a>
+							<a href="https://kmoberg.no" class="button alt">Learn More</a>
 						</footer>
 					</article>
 				</div>
