Point developer website to Github instead

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<p>As a developer, I specialize in the backend work, and being an operations guy, helping the team build a process that enables fast deployment with great testing methodologies.</p>
 						</div>
 						<footer>
-							<a href="https://kmoberg.io" class="button alt">Learn More</a>
+							<a href="https://github.com/kmoberg" class="button alt">Learn More</a>
 						</footer>
 					</article>
 				</div>
