--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 		<title>Karl Mathias Moberg</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		
+		<meta property=’og:title’ content='Karl Mathias Moberg'/>
+		<meta property=’og:image’ content='http://i.kmoberg.io/CHdEjG’/>
+		<meta property=’og:description’ content='Karl Mathias Moberg - Developer, Systems Administrator and Photographer.'/>
+		<meta property=’og:url’ content='https://kmoberg.no'/>
+		<meta property='og:image:width' content='1200' />
+		<meta property='og:image:height' content='627' /><!-- TYPE BELOW IS PROBABLY: 'website' or 'article' or look on https://ogp.me/#types -->
+		<meta property="og:type" content='website'/>
+		
+		
+		
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
