--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<meta property="og:type" content='website'/>
 		
 		
-		
+		<link rel="me" href="https://mastodon.social/@kmoberg" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
