--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
 							<p>Portait, Landscape and Urban</p>
 						</header>
 						<div class="content">
-							<p>My passion for photography and video production has been around since I was a child. These days I do freelance professional work when requested, helping businesses get the photographs they whish for their need, or create memories for families.</p>
+							<p>My passion for photography and video production has been around for over 18 years. These days, along side my wife, we run Studio Moberg, a photography studio as a side business, photographing weddings, konfirmations, portraits and families dozens of times a year. Visit us at <a href="https://studiomoberg.no">https://studiomoberg.no</a> and contact us for a free consultation today!</p>
 						</div>
 						<footer>
-							<a href="https://km-foto.no" class="button alt">Learn More</a>
+							<a href="https://studiomoberg.no" class="button alt">Learn More</a>
 						</footer>
 					</article>
 				</div>
