--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<article class="box">
 						<header>
 							<h2>I am a Photographer</h2>
-							<p>Portait, Landscape and Urban</p>
+							<p>Wedding, Portrait, Family & Landscape</p>
 						</header>
 						<div class="content">
 							<p>My passion for photography and video production has been around for over 18 years. These days, along side my wife, we run Studio Moberg, a photography studio as a side business, photographing weddings, konfirmations, portraits and families dozens of times a year. Visit us at <a href="https://studiomoberg.no">https://studiomoberg.no</a> and contact us for a free consultation today!</p>
