--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			to the full filename of your image. This is used in each section to set
 			the background image.
 		-->
-			<section id="banner" class="bg-img" data-bg="bergen-fireworks.jpg">
+			<section id="banner" class="bg-img" data-bg="speiderbasen.jpeg">
 				<div class="inner">
 					<header>
 						<h1>I am Karl Mathias Moberg</h1>
@@ -65,7 +65,7 @@
 			</section>
 
 		<!-- Two -->
-			<section id="two" class="wrapper post bg-img" data-bg="servers.jpg">
+			<section id="two" class="wrapper post bg-img" data-bg="homelab.jpg">
 				<div class="inner">
 					<article class="box">
 						<header>
