--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			</section>
 
 		<!-- Three -->
-			<section id="three" class="wrapper post bg-img" data-bg="jacob.jpg">
+			<section id="three" class="wrapper post bg-img" data-bg="rings.jpg">
 				<div class="inner">
 					<article class="box">
 						<header>
