--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			</section>
 
 		<!-- One -->
-			<section id="one" class="wrapper post bg-img" data-bg="laptop.png">
+			<section id="one" class="wrapper post bg-img" data-bg="tysse.jpeg">
 				<div class="inner">
 					<article class="box">
 						<header>
